# NuuvifyWordSegmentation

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.dev  README.md  check_requirements.py  docker-compose.yml  docker-deploy.sh  example_usage.py  nginx.conf  pyproject.toml  run_tests.py
.devcontainer/: .zshrc  Dockerfile  custom-install.sh  devcontainer.json
.github/workflows/: ci-cd.yml
src/api/: auth_routes.py  main.py  nuuvify_wordsegment_routes.py  routes.py
src/core/: config.py  dependencies.py  models.py
src/services/: auth_service.py  azure_service.py  nuuvify_wordsegment_service.py
tests/: __init__.py  conftest.py  test_segmentation.py  test_word_segmentation_service.py
